src/objects/Facilities_Ticket__c.object
<CustomObject>
    <description>Jobs logged for facilities</description>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <label>Assigned to</label>
        <picklist>
            <picklistValues>
                <fullName>Helpdesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CopierTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ThirstAid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egengcia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24/7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS&amp;B ( Thiago)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charles Russell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destinations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tower Hamlets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xcalibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charityshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKDocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DH Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Preventative Maintenace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease / Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobiles and Phones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dilaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odd Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DHLocation__c</fullName>
        <label>DHLocation</label>
        <picklist>
            <picklistValues>
                <fullName>D H West (Services etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DH Sth West ( Finance etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DH Central (Rec Training Room)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DH Sth East (Fundraising)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DH East (Goods lift)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Please Specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Brief description of the request / fault</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Facilities Tickets</relationshipLabel>
        <relationshipName>R00N700000025C3IEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logged_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1-5 working days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 working days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 weeks - 1 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <description>Person reporting the fault / request</description>
        <label>Reported By</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <formula>CASE(Priority__c,
&quot;1-5 working days&quot;, Logged_Date__c + 1,
&quot;5-10 working days&quot;, Logged_Date__c + 5,
&quot;2 weeks - 1 month&quot;, Logged_Date__c + 14,
Logged_Date__c + 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WIthin_SLA__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Closed&quot;),IF( Completed_Date__c   &gt; Target_Date__c,&quot;OK&quot;,&quot;Toooo slow&quot;),&quot;Ticket Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WIthin SLA</label>
        <type>Text</type>
    </fields>
    <label>Facilities Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Location__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Priority__c</columns>
        <columns>Logged_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Priority__c</columns>
        <columns>Description__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Logged_Date__c</columns>
        <columns>Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Tickets</label>
    </listViews>
    <nameField>
        <displayFormat>f{0000}</displayFormat>
        <label>Facilities Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facilities Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ClosedTickets</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Completed_Date__c =Null, ISPICKVAL(Status__c , &quot;Closed&quot;))</errorConditionFormula>
        <errorMessage>You must enter a completed date if the ticket has been closed</errorMessage>
    </validationRules>
</CustomObject>